--- a/src/main/resources/templates/memberOffsetList.html
+++ b/src/main/resources/templates/memberOffsetList.html
@@ -45,7 +45,7 @@
     });
 
     function loadMembers(page = 0) {
-        const url = `/v2/members`;
+        const url = `/v2/members?page=${page}`;
 
         fetch(url)
             .then(response => response.json())
