--- a/src/main/resources/templates/mailTemplate.html
+++ b/src/main/resources/templates/mailTemplate.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>이메일 인증 링크</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
-<span>계정 활성화를 위해서 아래의 인증 링크를 클릭해주세요.</span><br>
-<a th:href="${link}">인증 링크</a>
+<div style="margin:120px">
+    <div style="margin-bottom: 10px">
+        <h1>인증 코드 메일입니다.</h1>
+        <br/>
+        <h3 style="text-align: center;"> 아래 코드를 사이트에 입력해주십시오</h3>
+    </div>
+    <div style="text-align: center;">
+        <h2 style="color: crimson;" th:text="${code}"></h2>
+    </div>
+    <br/>
+</div>
 </body>
 </html>
