--- a/src/main/resources/templates/mailTemplate.html
+++ b/src/main/resources/templates/mailTemplate.html
@@ -5,10 +5,10 @@
     <div style="margin-bottom: 10px">
         <h1>인증 코드 메일입니다.</h1>
         <br/>
-        <h3 style="text-align: center;"> 아래 코드를 사이트에 입력해주십시오</h3>
+        <h3> 아래 코드를 사이트에 입력해주십시오</h3>
     </div>
-    <div style="text-align: center;">
-        <h2 style="color: crimson;" th:text="${code}"></h2>
+    <div>
+        <h2 style="color: crimson;" th:text="${certifyNum}"></h2>
     </div>
     <br/>
 </div>
