--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -38,6 +38,13 @@
                         <label class="form-label text-white">tel no</label>
                         <input type="telNo" id="telNo" class="form-control" name="telNo">
                     </div>
+                    <div class="mb-3">
+                        <label class="form-label text-white">인증 번호</label>
+                        <div class="input-group">
+                            <input type="certifyNum" id="certifyNum" class="form-control" name="certifyNum">
+                            <button id="certifyNum-btn" class="btn btn-success">인증 번호 전송</button>
+                        </div>
+                    </div>
 
                     <button id="create-btn" class="btn btn-primary">Submit</button>
                 </div>
